ingress-python-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-python
  namespace: default
spec:
  rules:
    - host: python.room218.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-app
                port:
                  number: 8080
